# vibewall

./: .gitignore  README.md  meson.build
config/: default.toml
nix/: module.nix  package.nix
scripts/: benchmark.sh
src/cli/: main.cpp
src/core/: app_paths.cpp  app_paths.hpp  color_sort.cpp  color_sort.hpp  config.cpp  config.hpp  database.cpp  database.hpp  filters.cpp  filters.hpp  model.cpp  model.hpp  process.cpp  process.hpp  scanner.cpp  scanner.hpp  thumbnail_cache.cpp  thumbnail_cache.hpp  video_thumbnail.cpp  video_thumbnail.hpp  wallhaven_client.cpp  wallhaven_client.hpp  wallpaper_apply.cpp  wallpaper_apply.hpp
src/daemon/: main.cpp
src/picker/: main.cpp  renderer.cpp  renderer.hpp  wayland_app.cpp  wayland_app.hpp
systemd/: vibewallrezero-daemon.service
tests/: test_core.cpp  test_wallhaven.cpp
